--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -234,6 +234,11 @@
 
 {% block deezer_widget %}
     {% spaceless %}
+        <div class="row">
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-11">{{ form_row(form.artist) }}</div>
+                    <div class="col-md-1">
                         <div class="form-group"><label class="form-label">&nbsp;</label><a
                                     href="javascript:search()" class="btn btn-fill form-control">OK</a></div>
                     </div>
