--- a/src/CMS/Bundle/ContactBundle/Resources/views/Contact/index.html.twig
+++ b/src/CMS/Bundle/ContactBundle/Resources/views/Contact/index.html.twig
@@ -1,24 +1,35 @@
 {% extends "::admin/base_admin.html.twig" %}
 
 {% block body %}
-<div class="section-body row">
 	<!-- INBOX NAV -->
 	<div class="col-sm-4 col-md-3 col-lg-2">
-		<ul class="nav nav-pills nav-stacked nav-icon">
-			<li><small>MAILBOXES</small></li>
-			{% for f, icon in folders %}
-				{% if f == folder %}
-					<li class="active">
-						<a href="{{ path('admin_messages', {'folder': f}) }}">
-							<span class="{{ icon }}"></span> {{ f|trans|capitalize }}
-							<small>({{ messages|length }})</small>
-						</a>
-					</li>
-				{% else %}
-					<li><a href="{{ path('admin_messages', {'folder': f}) }}"><span class="{{ icon }}"></span> {{ f|trans|capitalize }}</a></li>
-				{% endif %}
-			{% endfor %}
-		</ul>
+		<div class="card">
+			<div class="header">
+				<h4 class="title"></h4>
+			</div>
+			<div class="content">
+				<div class="panel-group" id="mailboxes">
+                    {% for f, icon in folders %}
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h4 class="panel-title">
+                                    {% if f == folder %}
+									<a href="{{ path('admin_messages', {'folder': f}) }}" class="info">
+										<i class="{{ icon }}"></i> {{ f|trans|capitalize }}
+										<small>({{ messages|length }})</small>
+									</a>
+									{% else %}
+									<a href="{{ path('admin_messages', {'folder': f}) }}" class="info">
+										<i class="{{ icon }}"></i> {{ f|trans|capitalize }}
+									</a>
+									{% endif %}
+								</h4>
+							</div>
+						</div>
+					{% endfor %}
+				</div>
+			</div>
+		</div>
 	</div>
 	<!-- End Inbox nav -->
 	<div class="col-sm-8 col-md-9 col-lg-10">
@@ -34,7 +45,6 @@
 							<a href="javascript:showMail({{ message.id }});" class="list-group-item{{ class }}" data-id="{{ message.id }}">
 								<h5>{{ message.sender }}</h5>
 								<h4>{{ message.subject|trans }}</h4>
-								{# <p>{{ message.message|raw }}</p> #}
 							</a>
 						{% endfor %}
 					</div>
@@ -43,10 +53,10 @@
 					<div class="text-divider hidden-md hidden-lg"><span>Email</span></div>
 					<h1 class="no-margin">{{ last_message.subject|trans }}</h1>
 							<div class="btn-group stick-top-right">
-								<a href="" class="btn btn-icon-toggle btn-default"><i class="md md-delete"></i></a>
-								<a href="" class="btn btn-icon-toggle btn-default"><i class="md md-reply"></i></a>
-								<a href="" class="btn btn-icon-toggle btn-default"><i class="md md-reply-all"></i></a>
-								<a href="" class="btn btn-icon-toggle btn-default"><i class="md md-forward"></i></a>
+								<a href="" class="btn btn-icon-toggle btn-default"><i class="fa fa-trash"></i></a>
+								<a href="" class="btn btn-icon-toggle btn-default"><i class="fa fa-reply"></i></a>
+								<a href="" class="btn btn-icon-toggle btn-default"><i class="fa fa-reply-all"></i></a>
+								<a href="" class="btn btn-icon-toggle btn-default"><i class="fa fa-share"></i></a>
 							</div>
 							<span class="pull-right text-default-light">{{ last_message.sentDate|date('d/m/Y H:i') }}</span>
 							<strong>{{ last_message.sender }}</strong>
@@ -62,20 +72,4 @@
 			{% endif %}
 		</div>
 	</div>
-</div>
-<div class="section-action style-primary">
-	<div class="section-action-row">
-		<a class="btn ink-reaction btn-icon-toggle" data-toggle="tooltip" data-placement="top" data-original-title="Delete mail">
-			<span class="glyphicon glyphicon-trash"></span>
-		</a>
-		<a class="btn ink-reaction btn-icon-toggle" href="http://www.codecovers.eu/materialadmin/mail/reply" data-toggle="tooltip" data-placement="top" data-original-title="Reply to this mail">
-			<i class="fa fa-reply"></i>
-		</a>
-	</div>
-	<div class="section-floating-action-row">
-		<a class="btn ink-reaction btn-floating-action btn-lg btn-accent" href="{{ path('admin_contact_compose') }}" data-toggle="tooltip" data-placement="top" data-original-title="Compose">
-			<i class="md md-add"></i>
-		</a>
-	</div>
-</div>
 {% endblock body %}
