--- a/src/CMS/Bundle/ContentBundle/Resources/views/Field/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Field/index.html.twig
@@ -28,7 +28,7 @@
                     <th>{{ 'cms.field.title'|trans }}</th>
                     <th>{{ 'cms.field.type'|trans }}</th>
                     <th>{{ 'cms.field.field'|trans }}</th>
-                    <th>{{ 'cms.field.nale'|trans }}</th>
+                    <th>{{ 'cms.field.name'|trans }}</th>
                     <th>{{ 'cms.field.status'|trans }}</th>
                     <th>{{ 'cms.field.created'|trans }}</th>
                     <th class="no-sort">{{ 'actions'|trans }}</th>
