--- a/src/CMS/Bundle/CoreBundle/Resources/views/Mail/forgotpassword.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/Mail/forgotpassword.html.twig
@@ -1,5 +1,5 @@
 {% extends "::Templates/Mail/base.html.twig" %}
 
 {% block body %}
-	{{ 'cms.user.forgot_password.message'|trans }}
+	<h3>Bonjour {{ user.firstname }},</h3>
 {% endblock %}
