--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/edit.html.twig
@@ -31,6 +31,7 @@
                 <div class="card">
                     <div class="content">
                         {{ form_row(edit_form.metaValuesTemp) }}
+                        {{ form_row(edit_form.submit_seo) }}
                         <div class="clearfix"></div>
                     </div>
                 </div>
