--- a/src/CMS/Bundle/CoreBundle/Resources/views/Widget/share.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/Widget/share.html.twig
@@ -5,6 +5,6 @@
 <a href="https://www.facebook.com/sharer/sharer.php?u={{ url('front_single', {'alias': content.url})|url_encode }}" target="_blank" rel="noopener">
     <i class="fa fa-facebook"></i>
 </a>
-<a href="https://pinterest.com/pin/create/button/?url={{ content.thumbnail.getWebPath()|imagine_filter('thumb_post')|url_encode }}&media={{ content.thumbnail.metas['alt_1']|url_encode }}&description={{ content.chapo|url_encode }}" target="_blank" rel="noopener">
+<a href="https://pinterest.com/pin/create/button/?{% if content.thumbnail != null %}url={{ content.thumbnail.getWebPath()|imagine_filter('thumb_post')|url_encode }}&{% endif %}{% if content.thumbnail != null %}media={{ content.thumbnail.metas['alt_1']|url_encode }}&{% endif %}description={{ content.chapo|url_encode }}" target="_blank" rel="noopener">
     <i class="fa fa-pinterest"></i>
 </a>
