--- a/templates/Breezy/single-spectacles.html.twig
+++ b/templates/Breezy/single-spectacles.html.twig
@@ -12,7 +12,7 @@
                     <h1>{{ content.title }}</h1>
                 </div>
                 <div class="post-entry-text">
-                    {{ content.description|raw }}
+                    {{ content.description|contact_form|raw }}
                     {{ content.get('musique')|raw }}
                     <div class="date-author">
                         Ecrit par <span class="author">{{ content.author }}</span> le <span class="date">{{ content.created|localizeddate('full', 'none') }}</span>
