--- a/web/templates/Breezy/style.css
+++ b/web/templates/Breezy/style.css
@@ -9,8 +9,8 @@
  * Version: 1.0
  * Tags: responsive-layout, fluid-layout, translation-ready, microformats, masonry, lazy-load
  */
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300);
-@import url(http://cdn.materialdesignicons.com/1.3.41/css/materialdesignicons.min.css);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300);
+@import url(https://cdn.materialdesignicons.com/1.3.41/css/materialdesignicons.min.css);
 
 body *, body *:before, body *:after, html *, html *:before, html *:after {
     transition: all 0.5s ease;
@@ -911,6 +911,14 @@ body.search-open .search-form-area {
     transition: .3s;
 }
 
+.post-entry h3 {
+    font-size: 18px;
+}
+
+.post-entry h5 {
+    font-size: 14px;
+}
+
 .grid-layout .post-item .item .date-author {
     display: block;
     text-align: center;
@@ -928,7 +936,10 @@ body.search-open .search-form-area {
     font-size: 14px;
 }
 
-
+.post-entry li {
+    font-size: 12px;
+    line-height: 20px;
+}
 
 .goto-top.on {
     opacity: 1;
@@ -1768,4 +1779,36 @@ footer .logo {
         height: 30px;
         top: -15px;
     }
+}
+
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.alert-success {
+    color: #3c763d;
+    background-color: #b9df90;
+    border-color: #a0d468;
+}
+.alert-danger {
+    color: #a94442;
+    background-color: #f2838f;
+    border: #ed5565;
+}
+
+.alert-dismissable, .alert-dismissible {
+    padding-right: 35px;
+}
+
+.col-1-of-3 {
+    width: 33%;
+    float: left;
+}
+
+.col-2-of-3 {
+    width: 66%;
+    float: left;
 }
