--- a/app/Resources/views/admin/base_admin.html.twig
+++ b/app/Resources/views/admin/base_admin.html.twig
@@ -9,7 +9,7 @@
 		SCMS Admin
 	{% endif %}
 	</title>
-	<link href="http://fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" type="text/css">
     {% block scripts %}
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     {% endblock %}
