--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -37,5 +37,17 @@ output="assetic/breezy_js.js" %}
 <script type="text/javascript" src="{{ asset_url }}"></script>
 {% endjavascripts %}
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
+<script type="text/javascript">
+    if ('serviceWorker' in navigator) {
+        console.log('CLIENT: service worker registration in progress.');
+        navigator.serviceWorker.register('https://www.cms2.local/templates/Breezy/assets/js/service-worker.js').then(function() {
+            console.log('CLIENT: service worker registration complete.');
+        }, function() {
+            console.log('CLIENT: service worker registration failure.');
+        });
+    } else {
+        console.log('CLIENT: service worker is not supported.');
+    }
+</script>
 </body>
 </html>
