--- a/templates/Breezy/home.html.twig
+++ b/templates/Breezy/home.html.twig
@@ -13,7 +13,7 @@
                                     <span class="cat item-postit">
                                         {{ article.getCategoriesArticle(',', true)|raw }}
                                     </span>
-                                            <h2><a href="{{ path('front_single', {'alias': article.url}) }}"
+                                            <h2><a href="{{ path('front_single', {'alias': article.url, '_format': 'html'}) }}"
                                                    class="link-article">{{ article.title }}</a></h2>
                                             <span class="date-author">
                                         <span class="author">{{ article.author }}</span>
@@ -43,7 +43,7 @@
                                 <div id="post" class="post item">
                                     <div class="post-featured-item">
                                         {% if content.thumbnail is not null %}
-                                            <a href="{{ path('front_single', {'alias': content.url}) }}">
+                                            <a href="{{ path('front_single', {'alias': content.url, '_format': 'html'}) }}">
                                                 <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_list') }}"
                                                      alt="{{ content.thumbnail.metas['alt_1'] }}"
                                                      title="{{ content.thumbnail.metas['title_1'] }}">
@@ -53,7 +53,7 @@
                                     <div class="item-content">
                                         <div class="post-entry">
                                             <h2>
-                                                <a href="{{ path('front_single', {'alias': content.url}) }}">{{ content.title }}</a>
+                                                <a href="{{ path('front_single', {'alias': content.url, '_format': 'html'}) }}">{{ content.title }}</a>
                                             </h2>
                                             <div class="date-author"><span
                                                         class="date">{{ content.created|date(date_format) }}</span>
@@ -68,7 +68,7 @@
                                                 </div>
                                                 <div class="comment-like-container">
                                                     <i class="fa fa-comment"></i> {{ content.comments|length }}
-                                                    <a href="javascript:addLikeContent'{{ content.id }}')">
+                                                    <a href="javascript:addLikeContent('{{ content.id }}')">
                                                         <i class="fa fa-heart"></i> {{ content.likes }}
                                                     </a>
                                                 </div>
