Nouvel utilisateur définition du mot de passe

--- a/src/CMS/Bundle/CoreBundle/Resources/views/User/new.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/User/new.html.twig
@@ -62,6 +62,9 @@ $(document).ready(function(){
 			$(this).on('keyup', function() {
 				$(target).html(elem.val());
 			});
+			$(this).on('blur', function() {
+                $(target).html(elem.val());
+            });
 		}
 	})
 });
