--- a/app/Resources/views/admin/base_login.html.twig
+++ b/app/Resources/views/admin/base_login.html.twig
@@ -22,17 +22,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../dashboard.html">Symfony CMS</a>
-        </div>
-        <div class="collapse navbar-collapse">
-
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                   <a href="register.html">
-                        {{ 'cms.core.register'|trans }}
-                    </a>
-                </li>
-            </ul>
+            <a class="navbar-brand" href="javascript:">Symfony CMS</a>
         </div>
     </div>
 </nav>
