--- a/templates/Breezy/single.amp.html.twig
+++ b/templates/Breezy/single.amp.html.twig
@@ -5,4 +5,16 @@
          alt="{{ content.thumbnail.metas['alt_1'] }}"
              title="{{ content.thumbnail.metas['title_1'] }}" width="800" height="550"></amp-img>
 {% endif %}
+<div class="post-entry-text">
+    {{ content.description|contact_form|raw }}
+    <div class="date-author">
+        <div class="pull-left">
+            Ecrit par <span class="author">{{ content.author }}</span> le <span
+                    class="date">{{ content.created|localizeddate('full', 'none') }}</span>
+        </div>
+        <div class="pull-right">
+            {{ widget('share', content) }}
+        </div>
+    </div>
+</div>
 {% include "@cms/Breezy/footer.amp.html.twig" %}
