--- a/app/Resources/views/admin/base_login.html.twig
+++ b/app/Resources/views/admin/base_login.html.twig
@@ -64,7 +64,7 @@
 
 </body>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    {% javascripts output='js/scms.js'
+    {% javascripts output='js/scms-login.js'
         'bundles/core/js/jquery-ui.min.js'
         'bundles/core/js/bootstrap.min.js'
         'bundles/core/js/bootstrap-checkbox-radio-switch.js'
