--- a/src/CMS/Bundle/CoreBundle/Resources/views/Language/index.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/Language/index.html.twig
@@ -19,8 +19,12 @@
     {% endfor %}
     <div id="main-card" class="card">
         <div class="header">
-            <h4 class="title pull-left">{{ 'cms.content.content' |trans }}</h4>
-            <a href="{{ path('admin_languages_new') }}" class="btn btn-default" title="cms.core.language.add_new"><i class="fa fa-plus"></i></a>
+            <h4 class="title pull-left">{{ 'cms.core.languages' |trans }}</h4>
+            <div class="fixed-table-toolbar">
+                <div class="columns columns-right pull-right">
+                    <a href="{{ path('admin_languages_new') }}" class="btn btn-default" title="{{ "cms.core.language.add_new"|trans }}"><i class="fa fa-plus"></i></a>
+                </div>
+            </div>
             <div class="clearfix"></div>
       </div>
       <div class="content">
